// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home component on duplicate entry 1`] = `
<div>
  <div
    className="navbar"
  >
    <h2>
      My Weather
    </h2>
  </div>
  <main>
    <div
      className="bg"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="w-header"
        >
          <h1>
            My Weather
          </h1>
        </div>
        <div
          className="center"
        >
          <p>
            The current weather for your favorite cities!
          </p>
        </div>
        <div
          className="center"
        />
        <div
          className="center"
        >
          <p>
            City Already Exist
          </p>
        </div>
        <div
          className="flex"
        >
          <input
            onChange={[Function]}
            placeholder="New city name..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn"
            color="primary"
          >
            Add City
          </button>
        </div>
      </form>
    </div>
  </main>
  <div
    className="select"
  >
    <li>
      Select a city.
    </li>
  </div>
  <div
    className="cities"
  >
    <ul>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          New York
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Oklahoma
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Toronto
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Seattle
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          dallas
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
  <div />
</div>
`;

exports[`Home component on invalid search 1`] = `
<div>
  <div
    className="navbar"
  >
    <h2>
      My Weather
    </h2>
  </div>
  <main>
    <div
      className="bg"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="w-header"
        >
          <h1>
            My Weather
          </h1>
        </div>
        <div
          className="center"
        >
          <p>
            The current weather for your favorite cities!
          </p>
        </div>
        <div
          className="center"
        >
          <p>
            invalid search
          </p>
        </div>
        <div
          className="center"
        >
          <p>
            City Already Exist
          </p>
        </div>
        <div
          className="flex"
        >
          <input
            onChange={[Function]}
            placeholder="New city name..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn"
            color="primary"
          >
            Add City
          </button>
        </div>
      </form>
    </div>
  </main>
  <div
    className="select"
  >
    <li>
      Select a city.
    </li>
  </div>
  <div
    className="cities"
  >
    <ul>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          New York
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Oklahoma
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Toronto
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Seattle
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          dallas
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
  <div />
</div>
`;

exports[`Home component with initial data 1`] = `
<div>
  <div
    className="navbar"
  >
    <h2>
      My Weather
    </h2>
  </div>
  <main>
    <div
      className="bg"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="w-header"
        >
          <h1>
            My Weather
          </h1>
        </div>
        <div
          className="center"
        >
          <p>
            The current weather for your favorite cities!
          </p>
        </div>
        <div
          className="center"
        />
        <div
          className="center"
        />
        <div
          className="flex"
        >
          <input
            onChange={[Function]}
            placeholder="New city name..."
            required={true}
            type="text"
            value=""
          />
          <button
            className="btn"
            color="primary"
          >
            Add City
          </button>
        </div>
      </form>
    </div>
  </main>
  <div
    className="select"
  >
    <li>
      Select a city.
    </li>
  </div>
  <div
    className="cities"
  >
    <ul>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          New York
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Oklahoma
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Toronto
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          Seattle
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
      <li
        className="w-table"
      >
        <span
          className="selector"
          onClick={[Function]}
        >
          dallas
        </span>
        <button
          className="delete-btn"
          onClick={[Function]}
        >
          Delete
        </button>
      </li>
    </ul>
  </div>
  <div />
</div>
`;
